# gom64p

./: .gitignore  README.md  global_module.py  gom64p  gom64p.doap  gom64p.in  meson.build  net.Mastergatto.gom64p.json  requirements.txt
build-aux/aur/: PKGBUILD
build-aux/flatpak/: net.Mastergatto.gom64p.dev.json  net.Mastergatto.gom64p.json
build-aux/meson/: post_install.py
data/: meson.build  net.Mastergatto.gom64p.appdata.xml.in  net.Mastergatto.gom64p.desktop.in  net.Mastergatto.gom64p.gschema.xml
data/icons/: meson.build
data/ui/: menubar.ui  rombrowser.ui
gom64p/: main.py
gom64p/icons/: LICENSE
gom64p/utils/: config.py  environment.py  logging.py
gom64p/widget/: actions.py  canvas.py  cheats.py  configure.py  dialog.py  gameprop.py  keysym.py  media.py  menu.py  plugin.py  rombrowser.py  window.py
gom64p/wrapper/: callback.py  datatypes.py  functions.py  vidext.py
po/: POTFILES  meson.build
ui/icons/: LICENSE
utils/: cache.py  config.py  environment.py  logging.py  platforms.py
widget/: actions.py  canvas.py  cheats.py  configure.py  dialog.py  gameprop.py  glwidget.py  keysym.py  media.py  menu.py  plugin.py  rombrowser.py  tpak.py  window.py
wrapper/: callback.py  datatypes.py  functions.py  vidext.py
