icondir = join_paths(get_option('datadir'), 'icons/hicolor')
pkgicondir = join_paths(get_option('datadir'), 'gom64p/icons/hicolor')

#install_subdir('hicolor/16x16', install_dir: pkgicondir)
#install_subdir('hicolor/24x24', install_dir: pkgicondir)
#install_subdir('hicolor/32x32', install_dir: pkgicondir)
#install_subdir('hicolor/48x48', install_dir: pkgicondir)
#install_subdir('hicolor/64x64', install_dir: pkgicondir)
#install_subdir('hicolor/128x128', install_dir: pkgicondir)
#install_subdir('hicolor/256x256', install_dir: pkgicondir)
#install_subdir('hicolor/512x512', install_dir: pkgicondir)
install_subdir('hicolor/scalable', install_dir: pkgicondir)

install_data(['hicolor/scalable/apps/net.Mastergatto.gom64p.svg'],
  install_dir: join_paths(icondir, 'scalable/apps'))

